crates/hexeract-macros/tests/ui/fail_wrong_arity.stderr
error: `handle` must take `ctx: &HandlerContext`
  --> tests/ui/fail_wrong_arity.rs:13:5
   |
13 |     async fn handle(&self, _c: Cmd) -> Result<(), HexeractError> {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `HexeractError`
 --> tests/ui/fail_wrong_arity.rs:1:30
  |
1 | use hexeract_core::{Command, HexeractError};
  |                              ^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default
